tests/NormalTests/paczka1/fuzzy1/81238210.err
Error in line 2: 3ymQywI S620 66,7
Error in line 13: 3ymQywI S88 80,1
Error in line 18: 3ymQywI S905 19,9
Error in line 19: ZFz53mNxZv S88 818,5
Error in line 22: ZFz53mNxZv S96 6,6
Error in line 20: ntZPdR S905 176,2
Error in line 35: 3ymQywI S905 53,1
